objects/Applicable_Agreements_Accounts__c.object
<CustomObject>
    <fields>
        <fullName>ABB_Agreement_Number__c</fullName>
        <formula>Agreement__r.ABB_Agreement_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_GUID__c</fullName>
        <formula>Account__r.GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applicable Agreements</relationshipLabel>
        <relationshipName>Applicable_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Leading_Business_Unit__c</fullName>
        <formula>TEXT(Agreement__r.Leading_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Leading Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Leading_Division__c</fullName>
        <formula>TEXT(Agreement__r.Leading_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Leading Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Leading_PG__c</fullName>
        <formula>TEXT(Agreement__r.Leading_Product_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Leading PG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <formula>HYPERLINK(&apos;/apex/VFAgreementAction_CLM?Id=&apos;+Agreement__c+&apos;&amp;action=Applicaple_Account&apos;, Agreement__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Owner__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Agreement__r.Owner:User.Id , Agreement__r.Owner:User.FirstName + &quot; &quot; + Agreement__r.Owner:User.LastName, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Record_Type__c</fullName>
        <formula>Agreement__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Valid_From__c</fullName>
        <formula>Agreement__r.Apttus__Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Valid_To__c</fullName>
        <formula>Agreement__r.Apttus__Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>Applicable_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buying_Account_by_DIV__c</fullName>
        <formula>IF( INCLUDES( Account__r.Buying_Account_by_DIV_And_Acc_Country__c  , &quot;EP&quot;) , &quot;EP; &quot;, null) +
IF( INCLUDES( Account__r.Buying_Account_by_DIV_And_Acc_Country__c  , &quot;IA&quot;) , &quot;IA; &quot;, null) +
IF( INCLUDES( Account__r.Buying_Account_by_DIV_And_Acc_Country__c  , &quot;PG&quot;) , &quot;PG; &quot;, null) +
IF( INCLUDES(Account__r.Buying_Account_by_DIV_And_Acc_Country__c   , &quot;RM&quot;) , &quot;RM; &quot;, null) +
IF( INCLUDES( Account__r.Buying_Account_by_DIV_And_Acc_Country__c   , &quot;ZC&quot;) , &quot;ZC &quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buying Account by DIV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family_Tree_Level__c</fullName>
        <formula>TEXT(Account__r.Family_Tree_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Tree Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Account__r.Account_RecordType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Applicable Account</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Applicable Agreements/Accounts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicable Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>